cmake_minimum_required(VERSION 3.10)
project(QtStreamDeck VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt5 5.15 REQUIRED COMPONENTS Core Gui Svg)
find_package(hidapi QUIET)
if(NOT hidapi_FOUND)
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(HIDAPI REQUIRED hidapi-hidraw)
    add_library(hidapi::hidapi INTERFACE IMPORTED)
    target_include_directories(hidapi::hidapi INTERFACE ${HIDAPI_INCLUDE_DIRS})
    target_link_libraries(hidapi::hidapi INTERFACE ${HIDAPI_LIBRARIES})
endif()

add_subdirectory(src)
add_subdirectory(examples)
